Added shader file

--- a/UnityQuest2020Template/.gitignore
+++ b/UnityQuest2020Template/.gitignore
@@ -93,6 +93,7 @@ crashlytics-build.properties
 /[Aa]ssets/[Oo]culus/[Ss]ample[Ff]ramework/[Uu]sage/*
 !/[Aa]ssets/[Oo]culus/[Ss]ample[Ff]ramework/[Uu]sage/[Ll]ocomotion/
 !/[Aa]ssets/[Oo]culus/[Ss]ample[Ff]ramework/[Uu]sage/[Ll]ocomotion/[Mm]aterials/
+!/[Aa]ssets/[Oo]culus/[Ss]ample[Ff]ramework/[Uu]sage/[Ll]ocomotion/[Ss]haders/
 
 
 # Teleport controls
